# backend

./: .env  .env.template  .gitignore  Cargo.toml  Insomnia.json  lefthook.yml
.github/workflows/: build.yml
migrations/: 20220726195815_init.sql  20220802015017_email_confirmations.sql
src/: config.rs  error.rs  main.rs  option.rs  prelude.rs  response.rs  settings.rs  state.rs  test.rs
src/models/: user.rs
src/repositories/: email_confirmations.rs  mod.rs  user.rs
src/repositories/file/: fs.rs  memory.rs  mod.rs
src/routes/: index.rs  mod.rs  upload.rs
src/routes/auth/: login.rs  mod.rs  register.rs  test.rs
src/services/: email.rs  file_save.rs  jwt.rs  mod.rs
