[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
tokio = { version = "1.20.1", features = ["full"] }
axum = "0.5.14"
axum-macros = "0.2.3"
sqlx = { version = "0.6.0", features = ["runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
argon2 = "0.4.1"
rand_core = { version = "0.6", features = ["std"] }
email_address = "0.2.1"

[dev-dependencies]
axum-test-helper = "0.1.1"
hyper = { version = "0.14.20", features = ["full"] }
tower = { version = "0.4.13", features = ["util"] }
